--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viwport" content="width=device-width, initial-scale=1">
     <title>Acceuil</title>
-    <link rel="stylesheet" type="text/css" href="/fansite.css">
+    <link rel="stylesheet" type="text/css" href="fansite.css">
     <link rel="icon" type="image/jpg" href="image/icon.png">
 </head>
 
