--- a/Esports.html
+++ b/Esports.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viwport" content="width=device-width, initial-scale=1">
     <title>Esport</title>
-    <link rel="stylesheet" type="text/css" href="Esports.css">
+    <link rel="stylesheet" type="text/css" href="esports.css">
     <link rel="icon" type="image/jpg" href="image/icon.png">
 </head>
 
